# Playa_Tay

./: ALIGNMENT_REVIEW.md  Cargo.toml  DEPLOYMENT_READINESS.md  LOCAL_SETUP_TROUBLESHOOTING.md  M1_STREAMING_HUB_READY.md  PHASE_2_PLANNING.md  SETUP_SUMMARY.md  SPEC_COMPARISON.md  TESTING_GUIDE.md  VERIFICATION_REPORT.md  VISION.md  VISION_SUMMARY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  recap.md  spec.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  pr-guard.yml  yolo-guidance-comment.yml  yolo-open-issues.yml  yolo-supervisor.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
crates/module-downloader/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
crates/module-downloader/examples/: basic_download.rs
crates/module-downloader/src/: error.rs  lib.rs  progress.rs  rate_limiter.rs
crates/module-downloader/tests/: integration_test.rs
crates/tauri/: Cargo.toml  IPC_SECURITY.md
docs/: M1_IMPLEMENTATION_SUMMARY.md  M1_QUICK_START.md  M1_STREAMING_HUB.md
examples/api/: package.json  test-electron-integration.sh  test_electron_commands.js
examples/api/src-tauri/: Cargo.toml  tauri.ci.json  tauri.conf.json
examples/api/src-tauri/migrations/: 002_streaming_schema.sql
examples/api/src-tauri/resources/electron-shell/: main.js
examples/api/src-tauri/src/: cmd.rs  lib.rs  streaming_tests.rs
examples/api/src-tauri/src/streaming/: commands.rs  database.rs  db.rs  mod.rs  models.rs  oauth.rs  recommendations.rs  tests.rs
examples/api/src-tauri/src/streaming/providers/: mod.rs  youtube.rs
examples/api/src-tauri/tests/: electron_integration.rs  streaming_integration.rs
examples/multiwindow/: Cargo.toml
examples/streaming-hub/: README.md  index.html  main.rs  tauri.conf.json
modules/streaming-hub/: README.md  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
scripts/: yolo-open-issues.js
specs/: ALIGNMENT_SUMMARY.md  FUTURE_VISION_QUESTIONNAIRE.md
(+70 files in other folders)
