[package]
name = "module-downloader"
version = "0.1.0"
description = "HTTP downloader with resume capability and integrity verification"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["fs", "io-util", "time"] }
sha2 = "0.10"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
futures = "0.3"
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
tempfile = "3"
